fix: fix content overflowing container and refactor how the container is handled

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -49,10 +49,8 @@
 .container {
   padding-left: 16px;
   padding-right: 16px;
-  margin-left: 16px;
-  margin-right: 16px;
   width: 100%;
-  max-width: 1080px;
+  max-width: 700px;
 }
 .text-display {
   font-size: calc((112 / 16) * 1rem);
